# GLFWdraft

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  point.frag  point.vert
lib/: Material.h  Matrix  Matrix.h  Object.h  Shape.h  ShapeIndex.h  SolidShape.h  SolidShapeIndex.h  Uniform.h  Vector.h  Window.h
